--- a/visit-counter/.kubernetes/ingress.yaml
+++ b/visit-counter/.kubernetes/ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: my-ingress
   annotations:
-    ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
     - http:
